# phase

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY-AUDIT-2026-05-28.md  STATUS.md  deny.toml  release_plan.yaml
.cargo/: audit.toml
.github/workflows/: security.yml
boot/: .gitignore  Makefile  README.md
boot/configs/: bootstrap-nodes.toml  modes.conf
boot/docs/: ARCHITECTURE.md  COMPONENTS.md  QUICKSTART-ARM64.md  QUICKSTART-VM.md  QUICKSTART-x86_64.md  THREAT-MODEL.md  TROUBLESHOOTING.md  tested-hardware.md  testing.md
boot/esp/loader/: loader.conf
boot/examples/: hello-job.sh
boot/initramfs/: init
boot/initramfs/scripts/: kexec-boot.sh  mode-handler.sh  net-diag.sh  net-init.sh  net-wired.sh  overlayfs-setup.sh  plasm-init.sh
boot/rootfs/etc/: hostname  hosts  profile  resolv.conf
boot/schemas/: manifest.schema.json
boot/scripts/: build-image.sh  build-initramfs.sh  build-qcow2.sh  build-rootfs.sh  build-usb-image.sh  deps-check.sh  docker-build-arm64.sh  download-kernel.sh  partition-layout.sh  release.sh  test-qemu-x86.sh  write-usb-mac.sh  write-usb.sh
crates/lucidd/: Cargo.toml  README.md
crates/lucidd/src/: dht_transport.rs  echo.rs  lib.rs  main.rs  ollama.rs  policy.rs  registry.rs  router.rs  worker_llama.rs
crates/lucidd/systemd/: lucidd-relay.service
crates/lucidd/tests/: llama_worker.rs
crates/lucidd/tests/fixtures/: fake_llama_server.rs
crates/phase-artifact-server/: Cargo.toml  README.md
crates/phase-artifact-server/src/: artifacts.rs  config.rs  dht.rs  lib.rs  mdns.rs  metrics.rs  server.rs
crates/phase-identity/: Cargo.toml  README.md
crates/phase-identity/src/: default_path.rs  error.rs  keypair.rs  lib.rs  storage.rs
crates/phase-manifest/: Cargo.toml  README.md
crates/phase-manifest/src/: canonical.rs  error.rs  lib.rs  manifest.rs
crates/phase-net/: Cargo.toml  README.md
crates/phase-net/src/: discovery.rs  lib.rs  peer.rs  protocol.rs
crates/phase-protocol/: Cargo.toml  README.md  SPEC.md
crates/phase-protocol/src/: commitment.rs  job_spec.rs  lib.rs  worker.rs
crates/phase-receipt/: Cargo.toml  README.md
crates/phase-receipt/src/: canonical.rs  error.rs  lib.rs  receipt.rs
crates/plasm/: Cargo.toml  README.md
crates/plasm/docs/: provider-quickstart.md
crates/plasm/examples/: peer_id_check.rs  wasm_roundtrip_check.rs
crates/plasm/src/: config.rs  lib.rs  main.rs  worker.rs
crates/plasm/src/network/: execution.rs  mod.rs
crates/plasm/src/provider/: MDNS_INTEGRATION.md  config.rs  generator.rs  manifest.rs  mod.rs  server_adapter.rs  signing.rs
crates/plasm/src/wasm/: manifest.rs  runtime.rs
crates/plasm/tests/: boundary_artifact_server.rs  boundary_generic_envelopes.rs  boundary_libp2p_job.rs  boundary_manifest_pipeline.rs  boundary_persistent_identity.rs  boundary_php_compat_receipt.rs  boundary_receipt_roundtrip.rs
daemon/: Cargo.toml
daemon/debian/: postinst  prerm
daemon/docs/: api-reference.md  architecture.md  security.md  troubleshooting.md
daemon/src/: config.rs  lib.rs  main.rs
daemon/src/network/: discovery.rs  execution.rs  mod.rs  peer.rs  protocol.rs
daemon/src/provider/: artifacts.rs  config.rs  dht.rs  generator.rs  mdns.rs  metrics.rs  mod.rs  server.rs
daemon/src/wasm/: manifest.rs  mod.rs  receipt.rs  runtime.rs
daemon/systemd/: plasmd.service
docs/: building-on-ubuntu.md  cross-architecture-demo.md
examples/: README.md  local_test.php  manifest.example.json  manifest.schema.json  php_compat_receipt_check.php  receipt.example.json  receipt.schema.json  remote_test.php  sec03_verify_harness.php
memory-bank/: MISSION.md  activeContext.md  decisions.md  progress.md  projectRules.md  projectbrief.md  quick-start.md  systemPatterns.md  techContext.md  toc.md
memory-bank/plans/security-hardening/: README.md  SEC-00-ci-advisory-gate.md  SEC-01-signer-authorization-rust.md  SEC-02-dependency-advisories.md  SEC-03-php-sdk-verification.md  SEC-04-model-path-subprocess.md  SEC-05-receipt-verification-binding.md  SEC-06-inbound-dos-caps.md  SEC-07-worker-resource-limits.md  SEC-08-atomic-key-write.md  SEC-09-dns-bootstrap-hardening.md  SEC-10-log-injection.md  SEC-11-hardening-hygiene.md  SEC-12-dependency-hygiene.md  SEC-13-content-addressed-cid.md
memory-bank/releases/boot/: M1_boot_stub.md  M2_discovery.md  M3_verify_fetch.md  M4_kexec_modes.md  M5_packaging_vm.md  M6_plasma_hello.md  M7_docs_secureboot.md  README.md  agents_matrix.md  index.yaml  phase_boot_detailed_overview.md
memory-bank/releases/boot-arm/: QUICKSTART.md  README.md  parallels-setup.md  troubleshooting.md
memory-bank/releases/lucid/: README.md  index.yaml
memory-bank/releases/netboot/: README.md  agents_matrix.md  index.yaml
memory-bank/releases/phase-core/: README.md  index.yaml  research-brief.md  test-audit.md
memory-bank/tasks/2025-11/: 091109_library_binary_refactor.md  091109_milestone1_local_wasm_execution.md  091109_milestone3_remote_execution.md  091109_milestone4_packaging_demo.md  251108_architecture_diagram.md  251108_capability_manifest_advert.md  251108_client_retry_timeout.md  251108_cross_arch_demo.md  251108_deb_packaging.md  251108_example_hello_wasm.md  251108_init_repo_structure.md  251108_install_instructions.md  251108_job_handshake.md  251108_libp2p_kademlia.md  251108_nat_traversal.md  251108_noise_quic_encryption.md  251108_peer_logging.md  251108_php_client_local_demo.md  251108_php_verify_signature.md  251108_remote_test_php.md  251108_remote_wasm_exec.md  251108_return_stdout_receipt.md  251108_schemas_manifest_receipt.md  251108_serialize_job_payload.md  251108_systemd_service.md  251108_transmit_libp2p_stream.md  251108_wasm3_runner.md  251109_milestone2_peer_discovery.md  261126_phase_boot_implementation.md  271127_fedora_kexec_success.md  271127_netboot_provider.md  271127_phase_boot_auto_fetch.md  README.md
memory-bank/tasks/2026-05/: README.md
php-sdk/: composer.json
php-sdk/src/: Client.php  Crypto.php  Job.php  Manifest.php  Receipt.php  Result.php
wasm-examples/hello/: Cargo.toml  build.sh
wasm-examples/hello/src/: main.rs
(+97 files in other folders)
