[package]
name = "plasm"
version = "0.1.0"
edition = "2021"
authors = ["PhaseBased <hello@phasebased.com>"]
description = "Phase local WASM execution daemon"
license = "Apache-2.0"
repository = "https://github.com/phasebased/phase"

[[bin]]
name = "plasmd"
path = "src/main.rs"

[dependencies]
# WASM Runtime (using wasmtime for better compatibility)
wasmtime = "15.0"
wasmtime-wasi = "15.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography (Ed25519 signatures)
ed25519-dalek = "2.0"
sha2 = "0.10"
hex = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"
assert_matches = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
