[package]
name = "plasm"
version = "0.1.0"
edition = "2021"
authors = ["PhaseBased <hello@phasebased.com>"]
description = "Phase local WASM execution daemon"
license = "Apache-2.0"
repository = "https://github.com/phasebased/phase"

[lib]
name = "plasm"
path = "src/lib.rs"

[[bin]]
name = "plasmd"
path = "src/main.rs"

[[bin]]
name = "phase-discover"
path = "src/bin/phase_discover.rs"

[[bin]]
name = "phase-verify"
path = "src/bin/phase_verify.rs"

[[bin]]
name = "phase-fetch"
path = "src/bin/phase_fetch.rs"

[dependencies]
# WASM Runtime (using wasmtime for better compatibility)
wasmtime = "27"
wasmtime-wasi = "27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography (Ed25519 signatures)
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"  # Platform-independent paths

# Networking (libp2p) - Updated to latest
libp2p = { version = "0.54", features = ["kad", "noise", "tcp", "quic", "yamux", "macros", "tokio", "relay", "dcutr", "autonat", "identify", "mdns"] }
futures = "0.3"
num_cpus = "1.0"
rand = "0.8"

# HTTP client (for phase-fetch)
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
tempfile = "3.0"
assert_matches = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer = "PhaseBased <hello@phasebased.com>"
copyright = "2025, PhaseBased <hello@phasebased.com>"
license-file = ["../LICENSE", "0"]
extended-description = """\
Phase is an open protocol for distributed computation. \
Plasm is the local runtime engine that turns any computer into a node in the network. \
This package provides the plasmd daemon for executing WebAssembly workloads."""
depends = "$auto, systemd"
section = "net"
priority = "optional"
assets = [
    ["target/release/plasmd", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/plasm/", "644"],
    ["systemd/plasmd.service", "lib/systemd/system/", "644"],
]
maintainer-scripts = "debian/"
systemd-units = { unit-name = "plasmd", enable = false }
