# SPDX-License-Identifier: Apache-2.0
[package]
name = "phase-net"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
description = "libp2p, Kademlia DHT, mDNS, and Noise+QUIC transport for decentralized Phase peer discovery and capability advertisement."
authors = ["Michael Sitarzewski"]
repository = "https://github.com/msitarzewski/phase"
readme = "README.md"

[dependencies]
# Sibling Phase library crates. phase-identity supplies the persistent
# Ed25519 keypair the libp2p PeerId is derived from; phase-protocol supplies
# JobSpecKind so capability advertisements speak in workload-agnostic terms
# rather than WASM-specific runtime strings.
phase-identity = { path = "../phase-identity", version = "0.1.0" }
phase-protocol = { path = "../phase-protocol", version = "0.1.0" }

# Networking (libp2p). Same feature set as the daemon historically used, plus
# `request-response` for the JobOffer wire-level send path that M2 introduces.
libp2p = { version = "0.56", features = [
    "kad",
    "noise",
    "tcp",
    "quic",
    "yamux",
    "macros",
    "tokio",
    "relay",
    "dcutr",
    "autonat",
    "identify",
    "mdns",
    "request-response",
    "json",
    "cbor",
] }

# Async runtime + stream plumbing.
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization. JobOffer / JobResponse / JobRequirements stay on the wire
# as JSON for protocol compatibility with the November 2025 MVP.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
base64 = "0.22"

# Cryptography. Used only to bridge phase-identity's Ed25519 secret into the
# libp2p Keypair — the actual signing live in phase-identity / phase-receipt.
ed25519-dalek = "2.1"

# Logging.
tracing = "0.1"

# Error handling.
anyhow = "1.0"
thiserror = "2.0"

# Capability discovery defaults.
num_cpus = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
