# SPDX-License-Identifier: Apache-2.0
[package]
name = "phase-receipt"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Signed receipts generic over result type — SignedReceipt<T> for verifiable proof of Phase job completion."
authors = ["Michael Sitarzewski"]
repository = "https://github.com/msitarzewski/repository"
readme = "README.md"

[dependencies]
phase-identity = { path = "../phase-identity", version = "0.1.0" }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }

thiserror = "1"

[dev-dependencies]
serde_json = "1"
